--- a/pdfconfigs/config_mydoc_pdf.yml
+++ b/pdfconfigs/config_mydoc_pdf.yml
@@ -5,7 +5,7 @@ port: 4010
 output: pdf
 product: mydoc
 print_title: Fashion AbleTalents — mydoc product
-print_subtitle: verion 2021
+print_subtitle: version 2021
 output: pdf
 defaults:
   -
