--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ topnav_title: Fashion AbleTalents
 site_title: ヒットが見えるファッションを中心にライフスタイルを掲載する情報サイト。
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: tkvtv
+company_name: Activate-d
 # this appears in the footer
 
 github_editme_path: takagotch/page468/blob/gh-pages/
